# isogeometric_application

./: .gitignore  CMakeLists.txt  Doxyfile  IsogeometricApplication.py  LICENSE.txt  README.md  TODO  contributors.txt  isogeometric_application.cpp  isogeometric_application.h  isogeometric_application.sublime-workspace
custom_conditions/: contact_link_3D_kinematic_linear_isogeometric.cpp  dummy_isogeometric_condition.cpp  dummy_isogeometric_condition.h  face_load_isogeometric.cpp  face_load_isogeometric.h  face_pressure_isogeometric.cpp  face_pressure_isogeometric.h  line_force_isogeometric.cpp  line_force_isogeometric.h  line_force_isogeometric_2d.cpp  line_force_isogeometric_2d.h  master_contact_face_3D_isogeometric.cpp  master_contact_face_3D_isogeometric.h  slave_contact_face_3D_isogeometric.cpp  slave_contact_face_3D_isogeometric.h
custom_elements/: kinematic_linear_isogeometric.cpp  kinematic_linear_isogeometric.h  kinematic_linear_nurbs.h  total_lagrangian_isogeometric.cpp  total_lagrangian_isogeometric.h  unsaturated_soils_element_2phase_small_strain_isogeometric.cpp  unsaturated_soils_element_2phase_small_strain_isogeometric.h
custom_external_libraries/: RTree.h
custom_external_libraries/geomod/: CMakeLists.txt  geomodcore.cpp  geomodcore.h  geomodcore_global.h
custom_external_libraries/geomod/curve/: beziercurve.cpp  beziercurve.h  bsplinecurve.cpp  bsplinecurve.h  lagrangecurve.cpp  lagrangecurve.h  nurbscurve.cpp  nurbscurve.h
custom_external_libraries/geomod/curve/abstract/: curve.h  nonuniformcurve.cpp  nonuniformcurve.h  parametriccurve.cpp  parametriccurve.h  polygonbasedcurve.cpp  polygonbasedcurve.h
custom_external_libraries/geomod/geometry/: geometry_definitions.h  grid.cpp  grid.h  mesh.h  polygon.cpp  polygon.h  tmesh.cpp  tmesh.h  tmesh_definition.h
custom_external_libraries/geomod/geometry/tmesh/: hilbertcurve.cpp  hilbertcurve.h  iterativerefinement.cpp  iterativerefinement.h  knotvaluesdelegator.cpp  knotvaluesdelegator.h  simpletmesh.cpp  simpletmesh.h  tmeshedgerefine.cpp  tmeshedgerefine.h  tmeshfacerefine.cpp  tmeshfacerefine.h  tmeshsamples.cpp  tmeshsamples.h
custom_external_libraries/tetgen1.5.0/: CMakeLists.txt
custom_geometries/: geo_1d_bezier.h  geo_1d_nurbs.h  geo_2d_bezier.h  geo_2d_bezier_3.h  geo_2d_nurbs.h  geo_2d_nurbs_3.h  geo_3d_bezier.h  geo_3d_nurbs.h  isogeometric_geometry.h
custom_io/: bezier_model_part_io.cpp  bezier_model_part_io.h  isogeometric_model_part_io.h
custom_problemtypes/isogeometric.gid/: isogeometric.bas  isogeometric.bat  isogeometric.cnd  isogeometric.prb  isogeometric.py.bas  isogeometric.tcl  isogeometric_include.py.bas  mdpa_generator.py.bas  nurbs_mdpa.py.bas.bak
custom_processes/: isogeometric_partitioning_process.h
custom_python/: add_io_to_python.cpp  add_io_to_python.h  add_point_based_control_grid_to_python.h  add_processes_to_python.cpp  add_processes_to_python.h  add_utilities_1_to_python.cpp  add_utilities_2_to_python.cpp  add_utilities_3_to_python.cpp  add_utilities_4_to_python.cpp  add_utilities_to_python.cpp  add_utilities_to_python.h  isogeometric_python_application.cpp
custom_utilities/: basis_function_manager.h  bezier_classical_post_utility.h  bezier_integration_utils.h  bezier_post_utility.cpp  bezier_post_utility.h  bezier_test_utils.h  bezier_utils.cpp  bezier_utils.h  bspline_utils.cpp  bspline_utils.h  cell.h  cell_manager.cpp  cell_manager.h  cell_manager_2d.h  cell_manager_3d.h  cell_tree.h  control_grid.h  control_grid_library.h  control_grid_utility.h  control_point.h  domain_manager.h  domain_manager_2d.cpp  domain_manager_2d.h  domain_manager_3d.cpp  domain_manager_3d.h  fespace.h  grid_function.h  hdf5_post_utility.h  isogeometric_classical_post_utility.h  isogeometric_contact_utility.h  isogeometric_math_utils.h  isogeometric_merge_utility.h  isogeometric_post_utility.cpp  isogeometric_post_utility.h  isogeometric_posteriori_estimator.cpp  isogeometric_posteriori_estimator.h  knot.h  knot_array_1d.h  multi_multipatch_model_part.h  multipatch_model_part.h  (+11 more)
custom_utilities/gismo/: gismo_mesh.h
custom_utilities/hbsplines/: deprecated_basis_function_manager.h  deprecated_hb_basis_function.cpp  deprecated_hb_basis_function.h  deprecated_hb_mesh.cpp  deprecated_hb_mesh.h  hb_cell.h  hbsplines_basis_function.h  hbsplines_basis_function.hpp  hbsplines_fespace.h  hbsplines_patch_utility.h  hbsplines_refinement_utility.h
custom_utilities/hierarchical_bsplines/: hb_basis_function.cpp  hb_basis_function.h  hb_cell.cpp  hb_cell.h  hb_mesh.cpp  hb_mesh.h
custom_utilities/hierarchical_nurbs/: basis_function_manager.h  hn_basis_function.cpp  hn_basis_function.h  hn_cell.cpp  hn_cell.h  hn_mesh.cpp  hn_mesh.h
custom_utilities/hierarchical_nurbs.prebuild_level/: hn_basis_function.cpp  hn_basis_function.h  hn_cell.h  hn_cuboid.h  hn_level.h  hnmesh.cpp  hnmesh.h
custom_utilities/import_export/: multi_nurbs_patch_geo_exporter.h  multi_nurbs_patch_geo_importer.h  multi_nurbs_patch_glvis_exporter.h  multi_nurbs_patch_matlab_exporter.h  multipatch_exporter.h  multipatch_importer.h
custom_utilities/nurbs/: bsplines_fespace.cpp  bsplines_fespace.h  bsplines_fespace_library.h  bsplines_indexing_utility.h  bsplines_patch_utility.h  cell.h  cell_manager.cpp  cell_manager.h  cell_manager_1d.h  cell_manager_2d.h  cell_manager_3d.h  cell_tree.h  control_grid.h  control_point.h  (+24 more)
python_scripts/: bezier.txt  geometry_factory.py  layer_utils.py  mdpa_utils.py  straight_lining_generator.py  structural_solver_isogeometric.py  visualization_utils.py
tests/: CMakeLists.txt  infinite_plate.txt  slope3d.txt  test_CreateRectangularControlPointGrid.cpp  test_bezier_extraction_1d.cpp  test_bezier_extraction_1d.m  test_bezier_extraction_1d_test_2.cpp  test_bezier_extraction_1d_test_2.m  test_bezier_extraction_2d.cpp  test_bezier_extraction_2d.m  test_bezier_extraction_2d_test_2.cpp  test_bezier_extraction_2d_test_2.m  test_bezier_extraction_3d.cpp  test_bezier_extraction_3d.m  test_bezier_extraction_local_1d.cpp  test_knot_array_1d.cpp  test_knot_array_1d_test_2.cpp  test_tsplines_1.cpp
(+217 files in other folders)
